--- a/_config.yml
+++ b/_config.yml
@@ -24,6 +24,7 @@ url: "https://zkr984.github.io" # the base hostname & protocol for your site, e.
 #twitter_username: jekyllrb
 github_username:  zkr984
 disqus: 
+  timezone: America/California
   shortname: zkr984s-jekyll-site
 
 # Build settings
